--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.3.3",
-    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-plugin-mdx": "^5.7.0",
+    "gatsby-source-filesystem": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
